--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <div class="container">
     <h1>Welcome to the Horror Game!</h1>
     <p id="story"></p>
-    <div id="options"></div>
-    <div id="inputContainer">
-      <button onclick="submitAnswer()">Submit</button>
-    </div>
+    <form id="optionsForm">
+      <div id="options"></div>
+      <input type="submit" value="Submit">
+    </form>
   </div>
 
   <audio id="backgroundMusic" src="music.mp3" loop></audio>
