--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to the Horror Game!</h1>
+    <h1>Html Horror Game</h1>
     <p id="story"></p>
     <div id="options"></div>
     <div id="buttonContainer">
