--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <body>
   <div class="container">
     <h1>Html Horror Game</h1>
+    <div id="inventory">
+      <h2>Inventory</h2>
+      <ul id="inventoryList"></ul>
+    </div>
     <p id="story"></p>
     <div id="options"></div>
     <div id="buttonContainer">
