--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="buttonContainer">
       <button id="submitButton" onclick="submitAnswer()">Submit</button>
       <button id="nextButton" onclick="nextSituation()" style="display: none;">Next</button>
+      <button id="restartButton" onclick="restartGame()">Restart</button>
     </div>
   </div>
 
