--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <audio id="backgroundMusic" src="music.mp3" loop></audio>
+  <audio id="backgroundMusic" src="(Free) Horror Ambiance - Ominous Background Music.mp3" loop></audio>
   <script src="game.js"></script>
   <script>
     // ...existing code...
