--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <h2>Inventory</h2>
       <ul id="inventory-list"></ul>
     </div>
-    <p id="story"></p>
+    <p id="story">
+    <p id="inventory-text"></p>
+</p>
     <div id="options"></div>
     <div id="buttonContainer">
       <button id="startButton" onclick="startGame()">Start</button>
