--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
       <h2>Inventory</h2>
       <ul id="inventory-list"></ul>
     </div>
-    <p id="story">
-    <p id="inventory-text"></p>
-</p>
+    <p id="story"></p>
     <div id="options"></div>
     <div id="buttonContainer">
       <button id="startButton" onclick="startGame()">Start</button>
