--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="options"></div>
     <div id="buttonContainer">
       <button id="startButton" onclick="startGame()">Start</button>
+      <button id="submitButton" onclick="hideSubmitButton()" style="display: none;">Submit</button>
       <button id="restartButton" onclick="restartGame()" style="display: none;">Restart</button>
     </div>
   </div>
