--- a/index.html
+++ b/index.html
@@ -3,68 +3,7 @@
 <head>
   <title>Quest for the Enchanted Amulet</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
-      margin: 0;
-      padding: 0;
-    }
-
-    #game-container {
-      max-width: 500px;
-      margin: 20px auto;
-      background-color: #fff;
-      border: 1px solid #ccc;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    h1 {
-      color: #ff5733;
-      text-align: center;
-    }
-
-    #story {
-      font-size: 18px;
-      margin-bottom: 15px;
-    }
-
-    #options {
-      font-size: 16px;
-    }
-
-    #user-input {
-      width: 100%;
-      padding: 8px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    button {
-      margin: 5px;
-      padding: 8px 16px;
-      font-size: 16px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      background-color: #ff5733;
-      color: #fff;
-    }
-
-    #inventory {
-      margin-top: 20px;
-    }
-
-    #inventory-list {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    #inventory-list li {
-      margin-bottom: 5px;
-    }
+    /* Your CSS styles here */
   </style>
 </head>
 <body>
@@ -84,117 +23,7 @@
   </div>
 
   <script>
-    // Game data
-    const gameData = [
-      {
-        story: "You wake up in a dimly lit cave.",
-        options: ["1. Search for a torch and light it up to explore the cave.",
-                  "2. Listen carefully for any sounds before deciding what to do next.",
-                  "3. Attempt to retrace your steps and find another way out of the cave."]
-      },
-      {
-        story: "As you explore deeper, you encounter a fork in the path. Which way will you go?",
-        options: ["1. Take the left path.",
-                  "2. Choose the right path."]
-      },
-      {
-        story: "You take the left path.",
-        options: []
-      },
-      {
-        story: "You choose the right path.",
-        options: []
-      },
-      {
-        story: "You listen attentively, and faint whispers can be heard.",
-        options: ["1. Follow the whispers and investigate their source.",
-                  "2. Ignore the whispers and continue exploring the cave."]
-      },
-      {
-        story: "You decide to follow the whispers and investigate their source.",
-        options: []
-      },
-      {
-        story: "You decide to ignore the whispers and continue exploring the cave.",
-        options: []
-      },
-      {
-        story: "You try to find your way back, but the cave's twists confuse you.",
-        options: ["1. Go forward instead."]
-      }
-    ];
-
-    // Variables to keep track of the game state
-    let currentSituation = 0;
-    let collectedItems = [];
-
-    function displaySituation() {
-      document.getElementById("story").textContent = gameData[currentSituation].story;
-      let optionsList = gameData[currentSituation].options.join("\n");
-      document.getElementById("options").textContent = optionsList;
-    }
-
-    function handleUserInput() {
-      let userInput = document.getElementById("user-input").value.trim();
-      let choice = parseInt(userInput);
-
-      if (isNaN(choice) || choice < 1 || choice > gameData[currentSituation].options.length) {
-        alert("Invalid choice! Please enter a valid option number.");
-      } else {
-        currentSituation = choice + currentSituation;
-        displaySituation();
-
-        // Check for win or lose conditions
-        if (currentSituation === 2) {
-          endGame("Congratulations! You found the Enchanted Amulet and won the game!");
-        } else if (currentSituation === 6) {
-          endGame("You got lost in the cave and couldn't find the way out. Game Over!");
-        }
-      }
-
-      document.getElementById("user-input").value = "";
-    }
-
-    function endGame(message) {
-      document.getElementById("story").textContent = message;
-      document.getElementById("options").textContent = "";
-      document.getElementById("user-input").style.display = "none";
-      document.getElementById("buttonContainer").style.display = "none";
-
-      if (message.includes("won")) {
-        showInventory();
-      } else {
-        showRestartButton();
-      }
-    }
-
-    function showInventory() {
-      document.getElementById("inventory").style.display = "block";
-      let inventoryList = document.getElementById("inventory-list");
-      inventoryList.innerHTML = "";
-      collectedItems.forEach(item => {
-        let listItem = document.createElement("li");
-        listItem.textContent = item;
-        inventoryList.appendChild(listItem);
-      });
-    }
-
-    function showRestartButton() {
-      document.getElementById("restartButton").style.display = "block";
-    }
-
-    function restartGame() {
-      currentSituation = 0;
-      collectedItems = [];
-      document.getElementById("user-input").style.display = "block";
-      document.getElementById("buttonContainer").style.display = "block";
-      document.getElementById("inventory").style.display = "none";
-      document.getElementById("restartButton").style.display = "none";
-      displaySituation();
-    }
-
-    // Initialize the game
-    displaySituation();
+    // JavaScript code here
   </script>
 </body>
 </html>
